aligning fix

--- a/CSS/faqpage.css
+++ b/CSS/faqpage.css
@@ -94,7 +94,7 @@ body{
 .newsletter{
     font-size: 20px;
     display: grid;
-    grid-template-columns: 2fr 1fr;
+    grid-template-columns: 1fr 1fr;
     align-items: center;
 }
 
